# programming-lightning-intro

./: .gitignore  .replit  Cargo.toml  bitcoin.conf  build.rs  electrs.toml  replit.nix  start.sh
.config/: bashrc
.tutorial/: 01-welcome.md  02-setup.md  03-aliases-c.md  04-motivation.md  04-on-chain-payments.md  04-transactions-overview-c.md  05-pay-to-public-key-hash-c.md  05-payment-channels.md  06-multisig.md  06-pay-to-script-hash-c.md  07-multisig-issues.md  07-timelocks-c.md  08-segwit-c.md  08-timelocks.md  09-funding-output.md  1.01-welcome.md  1.02-setup.md  1.03-aliases.md  1.04-fairness-protocol.md  1.05-transactions-overview.md  1.05.5-signature-overview.md  1.06-pay-to-script-hash.md  1.06.5-keys-overview.md  1.07-pay-to-script-hash.md  1.07-timelocks.md  1.07.5-mempool-policy.md  1.08-problems-with-onchain.md  1.08-timelocks.md  1.08.5-naive-scaling.md  1.09-naive-scaling.md  1.09-payment-channels.md  1.10-naive-scaling.md  1.10-payment-channels.md  1.10-refund-transaction.md  1.11-payment-channels.md  1.11-refund-transaction.md  1.11-timeless-payment-channels.md  1.11.5-refund-transaction.md  1.12-channel-open.md  1.12-refund-transaction.md  (+111 more)
attached_assets/: Pasted--Compiling-pl-00-intro-v0-1-0-home-runner-workspace-error-E0507-cannot-move-out-of-self-moni-1740008955913.txt  Pasted-info-syncing-channel-updates-for-stable-x86-64-unknown-linux-gnu-info-latest-update-on-2025-02-2-1741815990190.txt  Pasted-pub-async-fn-get-bitcoind-client-BitcoindClient-let-bitcoind-BitcoindClient-new--1744295707190.txt  content-1744295349834.md
src/: lib.rs  main.rs  (+3 more)
(+86 files in other folders)
