[package]
name = "pl-00-intro"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.29.0"
lightning = { version = "0.0.114", features = ["max_level_trace"] }
lightning-block-sync = { version = "0.0.114", features = [ "rpc-client" ] }
lightning-invoice = { version = "0.22" }
lightning-net-tokio = { version = "0.0.114" }
lightning-persister = { version = "0.0.114" }
lightning-background-processor = { version = "0.0.114" }
lightning-rapid-gossip-sync = { version = "0.0.114" }

base64 = "0.13.0"
bitcoin-bech32 = "0.12"
bech32 = "0.8"
hex = "0.3"
libc = "0.2"

futures = "0.3"
chrono = "0.4"
rand = "0.4"
serde_json = { version = "1.0" }
tokio = { version = "1", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }


[build-dependencies]
syn = { version = "1.0.107", features = ["parsing", "full","extra-traits"] }

[lib]
doctest = false